[project]
name = "reddit_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dukhovichanna", email = "dukhovichanna@gmail.com"},
]
dependencies = [
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "requests>=2.31.0",
    "types-requests>=2.31.0.20240106",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-clarity>=1.0.1",
    "pytest-testdox>=3.1.0",
    "pre-commit>=3.6.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
